--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,49 @@
       
       <!-- 8 column -->
       <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in laborum magnam saepe sint inventore, suscipit assumenda unde est consequuntur numquam beatae harum consequatur ea, quis veniam ipsa debitis placeat?
+      <!-- jumbotron -->
+        <div class="jumbotron">
+          <div class="container">
+            <h1>Hello, world!</h1>
+            <p>Contents ...</p>
+            <p>
+
+            </p>
+          </div>
+        </div>
+
+      <div class="row">
+        <div class="col-sm-6 col-md-1">
+        </div>
+        <div class="col-sm-6 col-md-2">
+          <div class="thumbnail">
+            <img src="http://placehold.it/100x100">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-2">
+          <div class="thumbnail">
+            <img src="http://placehold.it/100x100">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-2">
+          <div class="thumbnail">
+            <img src="http://placehold.it/100x100">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-2">
+          <div class="thumbnail">
+            <img src="http://placehold.it/100x100">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-2">
+          <div class="thumbnail">
+            <img src="http://placehold.it/100x100">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-1">
+        </div>
+      </div>
+
       </div>
     </div>
     
