recommended people input

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
           </div>
         </div>
 
+      <!-- thumbnail grid -->
       <div class="row">
         <div class="col-sm-6 col-md-1">
         </div>
@@ -108,9 +109,30 @@
         <div class="col-sm-6 col-md-1">
         </div>
       </div>
+      
+      <!-- recommended people -->
+      <div class="row recommended-people">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="col-sm-6 col-md-2">
+        </div>
+        <div class="col-sm-6 col-md-8">
+          <div class="row">
+            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-6">
+              <input type="text"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AND
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-6">
+              <input type="text"> <button type="button" class="btn btn-default">GO</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-2">
+        </div>
+      </div>
 
       </div>
     </div>
+
+
     
 
     <!-- build:js(.) scripts/vendor.js -->
